[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/DialogueUI.gd" type="Script" id=2]

[node name="GameUI" type="CanvasLayer"]

[node name="DialogueUI" type="Panel" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ContentLabel" type="RichTextLabel" parent="DialogueUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 1.0
margin_right = -4.0
theme = ExtResource( 1 )
text = "Example text goes here.
It's two lines long."

[node name="LeftNamePanel" type="Panel" parent="DialogueUI"]
margin_top = -14.0
margin_right = 48.0
margin_bottom = 1.0

[node name="Label" type="Label" parent="DialogueUI/LeftNamePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
theme = ExtResource( 1 )
text = "Name"

[node name="RightNamePanel" type="Panel" parent="DialogueUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = -14.0
margin_bottom = 1.0

[node name="Label" type="Label" parent="DialogueUI/RightNamePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
theme = ExtResource( 1 )
text = "Name"
